@@ -2,6 +2,7 @@ Revision history for Test-Which
 
 0.05
 	Try again with IPC::Run3 if it's installed
+	Allow timeout to be specified - the default is 5seconds
 
 0.04	Sat Nov 29 13:26:52 EST 2025
 	"checked" was not being set up
